--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 server.error.include-stacktrace=never
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernaet.format_sql = true
+server.port=8081
