--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Food
+spring.datasource.url=jdbc:mysql://localhost:3306/Sample
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
@@ -6,4 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 server.error.include-stacktrace=never
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernaet.format_sql = true
+spring.main.allow-circular-references = true
 server.port=8081
