--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Sample
+spring.datasource.url=jdbc:mysql://localhost:3306/Book
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
